test/sema/if.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo() -> void {}

fn bar() -> i32 { return 1; }

fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:12: error: expected int in condition
    if (foo()) {}

    if (bar()) {}
    
    // CHECK: [[# @LINE + 1 ]]:17: error: expected int in condition
    else if (foo()) {}
}
// CHECK-NOT: {{.*}}
